<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/listitem_image_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/list_element"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gridelement_overview_listitem">
    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clock_frame"
        android:layout_width="80dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/listitem_image_border"
        app:layout_constraintStart_toStartOf="@+id/listitem_image_border"
        app:layout_constraintTop_toTopOf="@+id/listitem_image_border">

        <ImageView
            android:id="@+id/listitem_image_clock"
            android:layout_width="47dp"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/icon_clock"
            app:layout_constraintEnd_toEndOf="@+id/clock_frame"
            app:layout_constraintStart_toStartOf="@+id/clock_frame"
            app:layout_constraintTop_toTopOf="@+id/clock_frame"
            app:srcCompat="@drawable/icon_clock2" />

        <TextView
            android:id="@+id/listitem_text_expiredate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_dag"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/clock_frame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listitem_image_clock" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="195dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/listitem_image_border"
        app:layout_constraintStart_toEndOf="@+id/clock_frame"
        app:layout_constraintTop_toTopOf="@+id/listitem_image_border">

        <TextView
            android:id="@+id/listitem_text_productname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ble"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/listitem_text_productweight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/v_gt_300g"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listitem_text_productname" />

        <TextView
            android:id="@+id/listitem_text_expiredate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/udl_bsdato_07_01_2021"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listitem_text_productname" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/listitem_image_border"
        app:layout_constraintEnd_toEndOf="@+id/listitem_image_border"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/listitem_image_border">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/listitem_image_foodcategory"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/icon_foodcategory"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout3"
        app:layout_constraintEnd_toEndOf="@+id/listitem_image_border"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout3"
        app:srcCompat="@drawable/vegetables_temp" />


</androidx.constraintlayout.widget.ConstraintLayout>